Fix some bugs related to titles not showing, also implement first open website

--- a/main/res/values/attrs.xml
+++ b/main/res/values/attrs.xml
@@ -45,6 +45,7 @@
 
     <!-- attributes for custom made preferences -->
     <attr name="text" format="string" />
+    <attr name="popupTitle" format="string" />
     <attr name="url" format="string" />
     <attr name="urlButton" format="string" />
     <attr name="connector" format="string" />
