--- a/main/res/layout/template_preference_dialog.xml
+++ b/main/res/layout/template_preference_dialog.xml
@@ -8,7 +8,7 @@
     tools:context=".settings.TemplateTextPreference" >
 
     <EditText
-        android:id="@+id/signature_dialog_text"
+        android:id="@android:id/edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top|left"
