--- a/main/res/drawable/white_bcg.xml
+++ b/main/res/drawable/white_bcg.xml
@@ -4,8 +4,8 @@
     android:color="@android:color/black">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#C0FFFFFF" />
-            <corners android:radius="2dp" />
+            <solid android:color="@color/osm_zoomcontrolbackground" />
+            <corners android:radius="2dp" />/>
         </shape>
     </item>
 </ripple>
