--- a/main/res/layout/map_settings_button.xml
+++ b/main/res/layout/map_settings_button.xml
@@ -4,14 +4,29 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingBottom="5dp"
     android:layout_alignParentBottom="true">
 
-    <LinearLayout android:id="@+id/container_settings" style="@style/map_quickbuttons" android:layout_centerHorizontal="true">
-        <Button android:id="@+id/map_settings_popup" style="@style/button_icon_map" app:icon="@drawable/map_quick_settings" />
+    <LinearLayout
+        android:id="@+id/container_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
+        <ImageButton
+            android:id="@+id/map_settings_popup"
+            android:src="@drawable/map_quick_settings"
+            style="@style/map_quicksettingsbutton" />
     </LinearLayout>
-
-    <LinearLayout android:id="@+id/container_individualroute" style="@style/map_quickbuttons" android:layout_toRightOf="@id/container_settings" android:visibility="gone">
-        <Button android:id="@+id/map_individualroute_popup" style="@style/button_icon_map" app:icon="@drawable/map_quick_route" />
+    <LinearLayout
+        android:id="@+id/container_individualroute"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/container_settings"
+        android:layout_marginLeft="6dp"
+        android:visibility="gone">
+        <ImageButton
+            android:id="@+id/map_individualroute_popup"
+            style="@style/map_quicksettingsbutton"
+            android:src="@drawable/map_quick_route" />
     </LinearLayout>
-
 </RelativeLayout>
